--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "mobx-react": "4.4.3",
+    "query-string": "5.1.1",
+    "store": "2.0.12",
+    "globe.gl": "2.20.0"
   },
   "scripts": {
     "start": "react-scripts start",
